Replace overriden input element with placeholder
Once mounted the new LobbyTimerPicker fully replaces the previous date
input. Due to this the previous date input was removed and a simple div
is used now as a placeholder element.

Signed-off-by: Daniel Calviño Sánchez <danxuliu@gmail.com>

--- a/js/views/templates/callinfoview.handlebars
+++ b/js/views/templates/callinfoview.handlebars
@@ -63,7 +63,7 @@
 				<li>
 					<span class="menuitem icon-calendar lobby-timer-option">
 						<form class="lobby-timer-form">
-							<input class="lobby-timer-input datepicker" type="text" placeholder="{{lobbyTimerPlaceholder}}" value="{{lobbyTimerValue}}">
+							<div class="lobby-timer-picker"/>
 							<input type="submit" value="" class="icon icon-confirm lobby-timer-confirm">
 							<span class="icon icon-loading-small lobby-timer-loading hidden"/>
 						</form>
