Adjust confirm icon for lobby timer
The confirm icon is no longer visually inside the input (as the
DatetimePicker has its own icon so it can not be placed there), so the
CSS had to be adjusted due to this.

Signed-off-by: Daniel Calviño Sánchez <danxuliu@gmail.com>

--- a/css/style.scss
+++ b/css/style.scss
@@ -1124,6 +1124,27 @@ body:not(#body-public) .participantWithList > li > span:not(.currentUser):not(.g
 				}
 			}
 		}
+
+		.menuitem.lobby-timer-option {
+			.icon-confirm {
+				border: none;
+
+				opacity: .3;
+
+				&:hover,
+				&:focus,
+				&:active {
+					opacity: 1;
+				}
+			}
+
+			.icon-loading-small {
+				/* Inputs in menu items have a left margin, so it needs to be
+				 * included in the loading icon too to keep the same position
+				 * when it replaces the "input.icon-confirm" element. */
+				margin-left: 5px;
+			}
+		}
 	}
 
 	/* The specific locator is needed to have higher priority than other
