Limit moderation menu width so it does not overflow the sidebar
The moderation menu width is based on its contents, and it is mainly
affected by the width of the datetime picker. The sidebar width depends
on the viewport width, and the default width of the datetime picker
causes the moderation menu to be wider than the sidebar and overflow it
when the window is below ~1300px.

Besides depending on the viewport width, the sidebar width is also
limited to a minimum and maximum size of 300px and 500px, so the
sidebar width is always 300px when the viewport width is < 1111px. Due
to this the minimum width of the datetime picker can be set to 155px to
ensure that the moderation menu will not overflow the sidebar when it is
300px, and use a dynamic width based on the viewport width when it is
between 1111px and 1315px, fixing its width at the default 210px once
the viepower is > 1315px.

Signed-off-by: Daniel Calviño Sánchez <danxuliu@gmail.com>

--- a/css/style.scss
+++ b/css/style.scss
@@ -1126,6 +1126,19 @@ body:not(#body-public) .participantWithList > li > span:not(.currentUser):not(.g
 		}
 
 		.menuitem.lobby-timer-option {
+			.mx-datepicker {
+				/* Default datapicker size is 210px, which needs to be reduced
+				 * on narrow screens to prevent the moderation menu from
+				 * overflowing the sidebar. */
+				@media (max-width: 1315px) {
+					max-width: 210px;
+					/* Used when viewport is between 1111px and 1315px. */
+					width: calc(27vw - 145px);
+					/* Used when viewport is < 1111px. */
+					min-width: 155px;
+				}
+			}
+
 			.icon-confirm {
 				border: none;
 
