--- a/js/views/templates/callinfoview.handlebars
+++ b/js/views/templates/callinfoview.handlebars
@@ -61,7 +61,7 @@
 				</li>
 				{{#if isLobbyActive}}
 				<li>
-					<span class="menuitem icon-calendar lobby-timer-option">
+					<span class="menuitem icon-calendar-dark lobby-timer-option">
 						<form class="lobby-timer-form">
 							<div class="lobby-timer-picker"/>
 							<input type="submit" value="" class="icon icon-confirm lobby-timer-confirm">
